setting up webpack and vue file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 </head>
 <body>
   <div id="app">
-    <img :src="image" @click="dealNextCard"/>
+    
   </div>
-  <script src="https://unpkg.com/vue"></script>
-  <script src="./js/app.js"></script>
+  
+  <script src="/dist/build.js"></script>
 </body>
 </html>
