--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <head>
 </head>
 <body>
-  <div id="app">
-    
-  </div>
+  <form>
+    <div id="app">
+      
+    </div>
+  </form>
   
   <script src="/dist/build.js"></script>
 </body>
