--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <head>
   <title>Scythe Automa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
-  <form>
-    <div id="app">
-      
-    </div>
-  </form>
+  <div id="app" style="height:100%"></div>
   
   <script src="/dist/build.js"></script>
 </body>
